# homedeck

./: README.md  pyproject.toml  standalone.sh
assets/: 50-homedeck.rules
src/homedeck/: dataclasses.py  elements.py  enums.py  homedeck.py  icons.py
src/homedeck/yaml/: configuration.schema.yml
